--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,6 +37,7 @@ sky:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: itcast
     # 设置jwt过期时间
-    admin-ttl: 7200000
+#    TODO 记得修改
+    admin-ttl: 7200000000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
