--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -41,3 +41,9 @@ sky:
     admin-ttl: 7200000000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+minio:
+  endpoint: http://192.168.170.10:9000
+  access-key: minioadmin
+  secret-key: minioadmin
+  bucket-name: takeout
