--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
 
+  redis:
+    host: 192.168.170.10
+    port: 6379
+    database: 1
+
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
