商品浏览业务功能

--- a/sky-common/pom.xml
+++ b/sky-common/pom.xml
@@ -56,5 +56,11 @@
             <artifactId>minio</artifactId>
             <version>8.5.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
     </dependencies>
 </project>
