--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -42,13 +42,19 @@ sky:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: itcast
     # 设置jwt过期时间
-#    TODO 记得修改
-    admin-ttl: 7200000000000
+    admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-secret-key: itheima
+    user-ttl: 7200000
+    user-token-name: authentication
+  wechat:
+    appid: wx0851b0c2297b441d
+    secret: 277fa0c357853ed510eedae06c4909c1
 
 minio:
   endpoint: http://192.168.170.10:9000
   access-key: minioadmin
   secret-key: minioadmin
   bucket-name: takeout
+
